--- a/analyses/analysis_1.Rmd
+++ b/analyses/analysis_1.Rmd
@@ -20,25 +20,17 @@ glimpse(all_data)
 # Cleaning data
 ```{r}
 #select data to analyse 
-analyse_data <- all_data[-c(3,4,6,7,9,10,17,20,21,22)]
+analyse_data <- all_data[-c(3,4,6,7,9,10,17,20,21,22,24)]
 #exclude data where understanding check was wrong
 analyse_data <- analyse_data %>% 
   group_by(submission_id) %>% 
   filter(all( ( trial_name != "understanding_check" | ((response == "correct" & expected =="correct") | ( response == "incorrect" & expected == "incorrect")))))
 
 # change ingroup norm
-# analyse_data$ingroup_norm_new <- NA
-# if(grepl("chose to call the police and report the robber.$",analyse_data$ingroup_norm)){
-#   ingroup_norm_new = 0
-# } else if(grepl("chose to do nothing and leave the robber alone.$",analyse_data$ingroup_norm)){
-#   ingroup_norm_new = 1
-# }
-# 
-# analyse_data$ingroup_norm_new <- ifelse((grepl("chose to do nothing and leave the robber alone.$",analyse_data$ingroup_norm)),1 ,0)
 
-analyse_data %>%
-  mutate(ingroup_norm_new = case_when(grepl("chose to do nothing and leave the robber alone.$",analyse_data$ingroup_norm) ~ "1",
-                           grepl("chose to call the police and report the robber.$",analyse_data$ingroup_norm) ~ "0"))
+analyse_data <- analyse_data %>%
+  mutate(ingroup_norm_new = case_when(grepl("chose to do nothing and leave the robber alone.$",analyse_data$ingroup_norm) ~ 1,
+                           grepl("chose to call the police and report the robber.$",analyse_data$ingroup_norm) ~ 0))
 
 
 
@@ -48,11 +40,23 @@ analyse_data %>%
 
 analyse_data <- analyse_data[analyse_data$trial_name != "understanding_check", ]    
 # new labels for better understanding
-analyse_data <- mutate(analyse_data, condition = ifelse(grepl("chose to call the police and report the robber.$",analyse_data$ingroup_norm) & both_norms_shown ==0, "Ingroup norm favoured, call police, only ingroup norm shown",
-                                                  ifelse(grepl("chose to do nothing and leave the robber alone.$",analyse_data$ingroup_norm) & both_norms_shown==0, "Ingroup norm favoured, leave robber alone, Only ingroup norm shown",
-                                                         ifelse(grepl("chose to do nothing and leave the robber alone.$",analyse_data$ingroup_norm) & both_norms_shown==1, "Ingroup norm favoured, leaving robber alone, Both norms shown",
-                                                                ifelse(grepl("chose to call the police and report the robber.$",analyse_data$ingroup_norm) & both_norms_shown ==1,"Ingroup norm favoured, calling the police, Both norms shown",
+analyse_data <- mutate(analyse_data, condition = ifelse(ingroup_norm_new ==0 & both_norms_shown ==0, "Ingroup norm favoured, call police, only ingroup norm shown",
+                                                  ifelse(ingroup_norm_new ==1 & both_norms_shown==0, "Ingroup norm favoured, leave robber alone, only ingroup norm shown",
+                                                         ifelse(ingroup_norm_new ==1 & both_norms_shown==1, "Ingroup norm favoured, leaving robber alone, both norms shown",
+                                                                ifelse(ingroup_norm_new ==0 & both_norms_shown ==1,"Ingroup norm favoured, calling the police, both norms shown",
                                                                        NA)))))
+# make wider
+
+analyse_data <- pivot_wider(analyse_data,
+    names_from = trial_name,
+    values_from = response
+  )
+analyse_data <- analyse_data %>% 
+  group_by(submission_id) %>%
+    summarise_each(funs(toString(na.omit(.))))
+
+
+
 ```
 # Analysis
 ```{r}
