--- a/analyses/analysis_1.Rmd
+++ b/analyses/analysis_1.Rmd
@@ -30,19 +30,24 @@ theme_set(theme_bw(18)+
                   strip.text = element_text(face="bold"),
                   axis.line=element_line(),
                   text=element_text(family="serif")))
-
-all_data <- read.csv("./results_260_XPLab-2021-Group3_974857.csv")
-glimpse(all_data)
+old_data <- read.csv("./results_260_XPLab-2021-Group3_974857.csv")
+all_data <- read.csv("./test_marie.csv")
+#glimpse(all_data)
+all_data$submission_id <- 38
 typeof(all_data)
 ```
 # Cleaning data
 ```{r}
 #select data to analyse 
-analyse_data <- all_data[-c(3,4,6,7,9,10,17,20,21,22,24)]
+analyse_data <- all_data[-c(2,17,18,19,20,21,22,23,24,25,26)]
 #exclude data where understanding check was wrong
-analyse_data <- analyse_data %>% 
-  group_by(submission_id) %>% 
-  filter(all( ( trial_name != "understanding_check" | ((response == "correct" & expected =="correct") | ( response == "incorrect" & expected == "incorrect")))))
+# analyse_data <- analyse_data %>% 
+#   group_by(submission_id) %>% 
+#   filter(all( ( trial_name != "understanding_check" | ((response == "correct" & expected =="correct") | ( response == "incorrect" & expected == "incorrect")))))
+
+analyse_data <- analyse_data %>%
+  group_by(submission_id) %>%
+  filter(all( ( trial_name != "custom understanding check" | ((response_claim1 == "true") & (response_claim2 == "false") & (response_claim3 == "false") & (response_claim4 == "false")))))
 
 # change ingroup norm
 
@@ -56,7 +61,7 @@ analyse_data <- analyse_data %>%
 
 # exclude questions of understanding check
 
-analyse_data <- analyse_data[analyse_data$trial_name != "understanding_check", ]    
+analyse_data <- analyse_data[analyse_data$trial_name != "custom understanding check", ]    
 # new labels for better understanding
 analyse_data <- mutate(analyse_data, condition = ifelse(ingroup_norm_new ==0 & both_norms_shown ==0, "Ingroup norm favoured, call police, only ingroup norm shown",
                                                   ifelse(ingroup_norm_new ==1 & both_norms_shown==0, "Ingroup norm favoured, leave robber alone, only ingroup norm shown",
