--- a/analyses/analysis_1.Rmd
+++ b/analyses/analysis_1.Rmd
@@ -40,14 +40,15 @@ typeof(all_data)
 ```{r}
 #select data to analyse 
 analyse_data <- all_data[-c(2,17,18,19,20,21,22,23,24,25,26)]
+
 #exclude data where understanding check was wrong
 # analyse_data <- analyse_data %>% 
 #   group_by(submission_id) %>% 
 #   filter(all( ( trial_name != "understanding_check" | ((response == "correct" & expected =="correct") | ( response == "incorrect" & expected == "incorrect")))))
-
-analyse_data <- analyse_data %>%
-  group_by(submission_id) %>%
-  filter(all( ( trial_name != "custom understanding check" | ((response_claim1 == "true") & (response_claim2 == "false") & (response_claim3 == "false") & (response_claim4 == "false")))))
+# 
+# analyse_data <- analyse_data %>%
+#   group_by(submission_id) %>%
+#   filter(all( ( trial_name != "custom understanding check" | ((response_claim1 == "true") & (response_claim2 == "false") & (response_claim3 == "false") & (response_claim4 == "false")))))
 
 # change ingroup norm
 
@@ -77,26 +78,35 @@ analyse_data <- pivot_wider(analyse_data,
 analyse_data <- analyse_data %>% 
   group_by(submission_id) %>%
     summarise_each(funs(toString(na.omit(.))))
+#rename column into nice format
+
+analyse_data <- analyse_data %>%
+  rename(
+    moral_dilemma = "moral dilemma"
+  )
     
 #change response to moral dilemma
 #def call the police = 1
 # def not call the police = 6
 for(i in 1:nrow(analyse_data)){
-  if(analyse_data[i,"moral dilemma"] == "Definitely call the police and report the robber"){
-  analyse_data[i,"moral dilemma"]= 1
-  } else if (analyse_data[i,"moral dilemma"] == "Very likely call the police and report the robber"){
-  analyse_data[i,"moral dilemma"]= 2
-  } else if (analyse_data[i,"moral dilemma"] == "Probably call the police and report the robber"){
-  analyse_data[i,"moral dilemma"]= 3
-  } else if (analyse_data[i,"moral dilemma"] == "Probably do nothing and the leave the robber alone"){
-    analyse_data[i,"moral dilemma"]= 4
-  } else if (analyse_data[i,"moral dilemma"] == "Very likely do nothing and the leave the robber alone"){
-    analyse_data[i,"moral dilemma"]= 5
-  } else if (analyse_data[i,"moral dilemma"] == "Definitely do nothing and leave the robber alone"){
-    analyse_data[i,"moral dilemma"]= 6
+  if(analyse_data[i,"moral_dilemma"] == "Definitely call the police and report the robber"){
+  analyse_data[i,"moral_dilemma"]= 1
+  } else if (analyse_data[i,"moral_dilemma"] == "Very likely call the police and report the robber"){
+  analyse_data[i,"moral_dilemma"]= 2
+  } else if (analyse_data[i,"moral_dilemma"] == "Probably call the police and report the robber"){
+  analyse_data[i,"moral_dilemma"]= 3
+  } else if (analyse_data[i,"moral_dilemma"] == "Probably do nothing and the leave the robber alone"){
+    analyse_data[i,"moral_dilemma"]= 4
+  } else if (analyse_data[i,"moral_dilemma"] == "Very likely do nothing and the leave the robber alone"){
+    analyse_data[i,"moral_dilemma"]= 5
+  } else if (analyse_data[i,"moral_dilemma"] == "Definitely do nothing and leave the robber alone"){
+    analyse_data[i,"moral_dilemma"]= 6
   }
 
 }
+
+
+
 # code ingroup pro and outgroup anti to 0 and 1
 for(i in 1:nrow(analyse_data)){
   if(analyse_data[i,"identification_pro"] == 5 | analyse_data[i,"identification_pro"] == 6 | analyse_data[i,"identification_pro"] == 7){
@@ -114,6 +124,8 @@ for(i in 1:nrow(analyse_data)){
   }
 }
 
+analyse_data <- analyse_data[-c(2,3,5,6,7,8,9,10,11,12,13,14,16,17,20)]
+
 
 
 
@@ -123,24 +135,31 @@ for(i in 1:nrow(analyse_data)){
 # #Frequentist Analysis----------------
 # length(analyse_data$ingroup_norm_new)
 # length(analyse_data$both_norms_shown)
-#typeof(analyse_data[1,analyse_data$`moral dilemma`])
-#<- as.numeric(analyse_data$`moral dilemma`)
-analyse_data$`moral dilemma` <-transform(analyse_data, 'moral dilemma' = as.numeric('moral dilemma'))
-ordinal_1 <- clm(as.factor(analyse_data$`moral dilemma`)~ingroup_norm_new*both_norms_shown, data=analyse_data)
+#typeof(analyse_data[1,analyse_data$`moral_dilemma`])
+#<- as.numeric(analyse_data$`moral_dilemma`)
+#as.factor(analyse_data$moral_dilemma)
+#analyse_data$`moral_dilemma` <-transform(analyse_data, 'moral_dilemma' = as.numeric('moral_dilemma'))
+#ordinal_1 <- clm(as.factor(moral_dilemma)~ ingroup_norm_new*both_norms_shown, data=analyse_data)
 
-source("functions/produce_mean_and_count_bar_plot.R")
-plot_1 <- produce_mean_and_count_bar_plot(analyse_data, bar_width_means=0.5, bar_width_response=0.3)
-ggsave(file="plot_1.png", plot=plot_1, width=190, height = 110, units="mm")
+# source("functions/produce_mean_and_count_bar_plot.R")
+# plot_1 <- produce_mean_and_count_bar_plot(analyse_data, bar_width_means=0.5, bar_width_response=0.3)
+# ggsave(file="plot_1.png", plot=plot_1, width=190, height = 110, units="mm")
 
 #Bayesian analysis------------
 #Prepare data for stan.
 analyse_data <- analyse_data %>%
-  select(analyse_data$`moral dilemma`, ingroup_norm_new, both_norms_shown, identification_pro, identification_anti) %>% #select relevant columns
+  select(moral_dilemma, ingroup_norm_new, both_norms_shown, identification_pro, identification_anti) %>% #select relevant columns
   mutate(identification_pro = ifelse(is.na(identification_pro), 1, identification_pro), #For the experiment we assumed that participants identified with the ingroup and not with the outgroup.
          identification_anti = ifelse(is.na(identification_anti), 1, identification_anti)
          )
+#data_num <- as.data.frame(apply(analyse_data,2, as.numeric))
 stan_data_all <- as.list(c(analyse_data, N = dim(analyse_data)[1]))
 #stan_data1 <- as.list(c(filter(analyse_data), N=sum(analyse_data)))
+
+#--Fit models
+fit_SCT_all <- stan(file = "stan_models/SCT.stan", data=stan_data_all, iter=10000, chains=4, seed = 123, control=list(adapt_delta = 0.99))
+fit_herding_all <- stan(file = "stan_models/herding.stan", data=stan_data_all, iter=10000, chains=4, control=list(adapt_delta = 0.99))
+
 
 ```
 
