--- a/analyses/analysis_1.Rmd
+++ b/analyses/analysis_1.Rmd
@@ -128,7 +128,7 @@ for(i in 1:nrow(analyse_data)){
 }
 
 #analyse_data <- analyse_data[-c(2,3,5,6,7,8,9,10,11,12,13,14,16,17,20)]
-
+cleaned_data <- analyse_data
 
 
 
@@ -142,11 +142,11 @@ analyse_data <- mutate_all(analyse_data, function(x) as.numeric(as.character(x))
 #<- as.numeric(analyse_data$`moral_dilemma`)
 #as.factor(analyse_data$moral_dilemma)
 #analyse_data <- as.numeric(analyse_data)
-#ordinal_1 <- clm(as.factor(moral_dilemma)~ ingroup_norm_new*both_norms_shown, data=analyse_data)
+ordinal_1 <- clm(as.factor(moral_dilemma)~ ingroup_norm_new*both_norms_shown, data=analyse_data)
 
-# source("functions/produce_mean_and_count_bar_plot.R")
-# plot_1 <- produce_mean_and_count_bar_plot(analyse_data, bar_width_means=0.5, bar_width_response=0.3)
-# ggsave(file="plot_1.png", plot=plot_1, width=190, height = 110, units="mm")
+source("functions/produce_mean_and_count_bar_plot.R")
+plot_1 <- produce_mean_and_count_bar_plot(analyse_data, bar_width_means=0.5, bar_width_response=0.3)
+ggsave(file="plot_1.png", plot=plot_1, width=190, height = 110, units="mm")
 
 #Bayesian analysis------------
 #Prepare data for stan.
@@ -164,6 +164,50 @@ stan_data_all <- as.list(c(analyse_data, N = dim(analyse_data)[1]))
 fit_SCT_all <- stan(file = "stan_models/SCT.stan", data=stan_data_all, iter=10000, chains=4, seed = 123, control=list(adapt_delta = 0.99))
 fit_herding_all <- stan(file = "stan_models/herding.stan", data=stan_data_all, iter=10000, chains=4, control=list(adapt_delta = 0.99))
 
+#--Compare models using Bayes Factors
+marg_lik_SCT_all <- bridge_sampler(samples = fit_SCT_all)
+marg_lik_herding_all <- bridge_sampler(samples = fit_herding_all)
+bf(marg_lik_herding_all,marg_lik_SCT_all)
+
+
+#Plot which issues people cared about and the extent to which they agreed with them-------
+issue_plot_3 <- ggplot(cleaned_data, aes(x=factor(issue,labels = c("Gun control", 
+                                                 "Feminism",
+                                                 "Joe Biden",
+                                                 "Immigration and Dreamers",
+                                                 "Transgender rights",
+                                                 "Drug legalization",
+                                                 "Colin Kaepernick kneeling during the national anthem",
+                                                 "Buying and wearing fur",
+                                                 "Taxing religious organizations")
+                                                ),
+                  y = "statement rating", 
+                  colour = factor(issue),
+                  fill = factor(issue))) + 
+  geom_dotplot(binaxis = "y", stackdir = "center", binwidth = 0.15) +
+  labs(x = "Issue", y="Agreement") + 
+  guides(color=FALSE, fill=FALSE)+
+  scale_y_continuous(breaks=c(0,5,10), labels = c("Strongly disagree", "Neutral", "Strongly agree"))
+ggsave("issue_plot_3.png", issue_plot_3, width=34, height=13, units="cm")
+
+issue_plot_4 <- ggplot(cleaned_data, aes(x=factor(issue#, #labels = c("Gun \n control", 
+#                                                                 "Feminism", 
+#                                                                 "Joe \n Biden", 
+#                                                                 "Immigration",
+#                                                                 "Transgender \n rights",
+#                                                                 "Drug \n legalization",
+#                                                                 "Colin \n Kaepernick",
+#                                                                 "Fur is \n wrong",
+#                                                                 "Taxing religious organizations")
+),
+                                  y = issue, 
+                                  colour = factor(issue),
+                                  fill = factor(issue))) + 
+  geom_dotplot(binaxis = "y", stackdir = "center", binwidth = 0.15) +
+  labs(x = "Issue", y="Agreement") + 
+  guides(color=FALSE, fill=FALSE)+
+  scale_y_continuous(breaks=c(0,5,10), labels = c("Strongly disagree", "Neutral", "Strongly agree"))
+ggsave("issue_plot_4.png", issue_plot_4, width=34, height=13, units="cm")
 
 ```
 
