--- a/analyses/analysis_1.Rmd
+++ b/analyses/analysis_1.Rmd
@@ -9,10 +9,10 @@ output: html_document
 library(tidyverse)
 library(dplyr)
 library(ordinal)
-library(rstan)
+#library(rstan)
 library(bridgesampling)
 library(shinystan)
-rstan_options(auto_write = TRUE)
+#rstan_options(auto_write = TRUE)
 options(mc.cores = parallel::detectCores())
 set.seed(123)
 
@@ -129,6 +129,26 @@ for(i in 1:nrow(analyse_data)){
 
 #analyse_data <- analyse_data[-c(2,3,5,6,7,8,9,10,11,12,13,14,16,17,20)]
 cleaned_data <- analyse_data
+for(i in 1:nrow(cleaned_data)){
+  if(cleaned_data[i,"issue"] == "Gun control"){
+  cleaned_data[i,"issue"]= 0
+  } else if (cleaned_data[i,"issue"] == "Feminism"){
+  cleaned_data[i,"issue"]= 1
+  } else if (cleaned_data[i,"issue"] == "Joe Biden"){
+  cleaned_data[i,"issue"]= 2
+  } else if (cleaned_data[i,"issue"] == "Immigration and Dreamers"){
+    cleaned_data[i,"issue"]= 3
+  } else if (cleaned_data[i,"issue"] == "Transgender rights"){
+    cleaned_data[i,"issue"]= 4
+  } else if (cleaned_data[i,"issue"] == "Drug legalization"){
+    cleaned_data[i,"issue"]= 5
+  } else if (cleaned_data[i,"issue"] == "Colin Kaepernick kneeling during the national anthem"){
+    cleaned_data[i,"issue"]= 6
+  } else if (cleaned_data[i,"issue"] == "Buying and wearing fur"){
+    cleaned_data[i,"issue"]= 7
+  } else if (cleaned_data[i,"issue"] == "Taxing religious organizations"){
+    cleaned_data[i,"issue"]= 8
+  }  }
 
 
 
@@ -161,8 +181,8 @@ stan_data_all <- as.list(c(analyse_data, N = dim(analyse_data)[1]))
 
 
 #--Fit models
-fit_SCT_all <- stan(file = "stan_models/SCT.stan", data=stan_data_all, iter=10000, chains=4, seed = 123, control=list(adapt_delta = 0.99))
-fit_herding_all <- stan(file = "stan_models/herding.stan", data=stan_data_all, iter=10000, chains=4, control=list(adapt_delta = 0.99))
+fit_SCT_all <- rstan::stan(file = "stan_models/SCT.stan", data=stan_data_all, iter=10000, chains=4, seed = 123, control=list(adapt_delta = 0.99))
+fit_herding_all <- rstan::stan(file = "stan_models/herding.stan", data=stan_data_all, iter=10000, chains=4, control=list(adapt_delta = 0.99))
 
 #--Compare models using Bayes Factors
 marg_lik_SCT_all <- bridge_sampler(samples = fit_SCT_all)
@@ -170,44 +190,48 @@ marg_lik_herding_all <- bridge_sampler(samples = fit_herding_all)
 bf(marg_lik_herding_all,marg_lik_SCT_all)
 
 
-#Plot which issues people cared about and the extent to which they agreed with them-------
-issue_plot_3 <- ggplot(cleaned_data, aes(x=factor(issue,labels = c("Gun control", 
-                                                 "Feminism",
-                                                 "Joe Biden",
-                                                 "Immigration and Dreamers",
-                                                 "Transgender rights",
-                                                 "Drug legalization",
-                                                 "Colin Kaepernick kneeling during the national anthem",
-                                                 "Buying and wearing fur",
-                                                 "Taxing religious organizations")
-                                                ),
-                  y = "statement rating", 
-                  colour = factor(issue),
-                  fill = factor(issue))) + 
-  geom_dotplot(binaxis = "y", stackdir = "center", binwidth = 0.15) +
-  labs(x = "Issue", y="Agreement") + 
-  guides(color=FALSE, fill=FALSE)+
-  scale_y_continuous(breaks=c(0,5,10), labels = c("Strongly disagree", "Neutral", "Strongly agree"))
-ggsave("issue_plot_3.png", issue_plot_3, width=34, height=13, units="cm")
-
-issue_plot_4 <- ggplot(cleaned_data, aes(x=factor(issue#, #labels = c("Gun \n control", 
-#                                                                 "Feminism", 
-#                                                                 "Joe \n Biden", 
-#                                                                 "Immigration",
-#                                                                 "Transgender \n rights",
-#                                                                 "Drug \n legalization",
-#                                                                 "Colin \n Kaepernick",
-#                                                                 "Fur is \n wrong",
-#                                                                 "Taxing religious organizations")
-),
-                                  y = issue, 
-                                  colour = factor(issue),
-                                  fill = factor(issue))) + 
-  geom_dotplot(binaxis = "y", stackdir = "center", binwidth = 0.15) +
-  labs(x = "Issue", y="Agreement") + 
-  guides(color=FALSE, fill=FALSE)+
-  scale_y_continuous(breaks=c(0,5,10), labels = c("Strongly disagree", "Neutral", "Strongly agree"))
-ggsave("issue_plot_4.png", issue_plot_4, width=34, height=13, units="cm")
+#Create prior-posterior plots-------
+# source("functions/plot_priors_posteriors.R")
+# 
+# #Plot which issues people cared about and the extent to which they agreed with them-------
+# issue_plot_3 <- ggplot(cleaned_data, aes(x=factor(issue,labels = c(#"Gun control", 
+#                                                  "Feminism",
+#                                                  #"Joe Biden",
+#                                                  #"Immigration and Dreamers",
+#                                                  "Transgender rights",
+#                                                  #"Drug legalization",
+#                                                  "Colin Kaepernick kneeling during the national anthem",
+#                                                  "Buying and wearing fur"
+#                                                  #"Taxing religious organizations"
+#                                                  )
+#                                                 ),
+#                   y = "statement rating", 
+#                   colour = factor(issue),
+#                   fill = factor(issue))) + 
+#   geom_dotplot(binaxis = "y", stackdir = "center", binwidth = 0.15) +
+#   labs(x = "Issue", y="Agreement") + 
+#   guides(color=FALSE, fill=FALSE)+
+#   scale_y_continuous(breaks=c(0,5,10), labels = c("Strongly disagree", "Neutral", "Strongly agree"))
+# ggsave("issue_plot_3.png", issue_plot_3, width=34, height=13, units="cm")
+# 
+# issue_plot_4 <- ggplot(cleaned_data, aes(x=factor(issue#, #labels = c("Gun \n control", 
+# #                                                                 "Feminism", 
+# #                                                                 "Joe \n Biden", 
+# #                                                                 "Immigration",
+# #                                                                 "Transgender \n rights",
+# #                                                                 "Drug \n legalization",
+# #                                                                 "Colin \n Kaepernick",
+# #                                                                 "Fur is \n wrong",
+# #                                                                 "Taxing religious organizations")
+# ),
+#                                   y = issue, 
+#                                   colour = factor(issue),
+#                                   fill = factor(issue))) + 
+#   geom_dotplot(binaxis = "y", stackdir = "center", binwidth = 0.15) +
+#   labs(x = "Issue", y="Agreement") + 
+#   guides(color=FALSE, fill=FALSE)+
+#   scale_y_continuous(breaks=c(0,5,10), labels = c("Strongly disagree", "Neutral", "Strongly agree"))
+# ggsave("issue_plot_4.png", issue_plot_4, width=34, height=13, units="cm")
 
 ```
 
