--- a/analyses/analysis_1.Rmd
+++ b/analyses/analysis_1.Rmd
@@ -9,8 +9,10 @@ output: html_document
 library(tidyverse)
 library(dplyr)
 library(ordinal)
+library(StanHeaders)
 library(rstan)
 library(bridgesampling)
+library(shiny)
 library(shinystan)
 rstan_options(auto_write = TRUE)
 options(mc.cores = parallel::detectCores())
@@ -33,18 +35,28 @@ theme_set(theme_bw(18)+
 
 all_data <- read.csv("./results_260_XPLab-2021-Group3_974857.csv")
 glimpse(all_data)
+# total number of participants
+n_participants_raw <- all_data %>% 
+  group_by(submission_id) %>% 
+  summarise() %>% 
+  nrow(.)  
 ```
 # Cleaning data
 ```{r}
-#select data to analyse 
-analyse_data <- all_data[-c(3,4,6,7,9,10,17,20,21,22,24)]
+#select data to analyse. drop columns endTime(5), experiment_id(10), startDate(21), startTime(22), timeSpent(23), trial_number(25)
+analyse_data <- all_data[-c(5, 10, 21, 22, 23, 25)]
+glimpse(analyse_data)
 #exclude data where understanding check was wrong
 analyse_data <- analyse_data %>% 
   group_by(submission_id) %>% 
-  filter(all( ( trial_name != "understanding_check" | ((response == "correct" & expected =="correct") | ( response == "incorrect" & expected == "incorrect")))))
+  filter(all( ( trial_name != "understanding_check" | ((response_claim1 == "correct" &  response_claim2 == "incorrect" & response_claim3 == "incorrect" & response_claim4 == "incorrect")))))
+# look how many were excluded bco understanding check
+n_participants_raw - analyse_data %>% 
+  group_by(submission_id) %>% 
+  summarise() %>% 
+  nrow(.)  
 
-# change ingroup norm
-
+# change ingroup norm to 1 (do nothing) or 0 (call police)
 analyse_data <- analyse_data %>%
   mutate(ingroup_norm_new = case_when(grepl("chose to do nothing and leave the robber alone.$",analyse_data$ingroup_norm) ~ 1,
                            grepl("chose to call the police and report the robber.$",analyse_data$ingroup_norm) ~ 0))
