--- a/analyses/analysis_1.Rmd
+++ b/analyses/analysis_1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "final project analysis script"
-author: "Clara Matheis"
+author: "the group"
 date: "28 7 2021"
 output: html_document
 ---
@@ -58,8 +58,7 @@ n_participants_raw - analyse_data %>%
 
 # change ingroup norm to 1 (do nothing) or 0 (call police)
 analyse_data <- analyse_data %>%
-  mutate(ingroup_norm_new = case_when(grepl("chose to do nothing and leave the robber alone.$",analyse_data$ingroup_norm) ~ 1,
-                           grepl("chose to call the police and report the robber.$",analyse_data$ingroup_norm) ~ 0))
+  mutate(ingroup_norm_new = ifelse(grepl("chose to do nothing and leave the robber alone.$",ingroup_norm),1,ifelse(grepl("chose to call the police and report the robber.$",ingroup_norm),0,NA)))
 
 
 
@@ -83,24 +82,30 @@ analyse_data <- pivot_wider(analyse_data,
 analyse_data <- analyse_data %>% 
   group_by(submission_id) %>%
     summarise_each(funs(toString(na.omit(.))))
+
+#rename column into usable name
+analyse_data <- analyse_data %>%
+  rename(
+    moral_dilemma = "moral dilemma"
+  )
+analyse_data <- as.data.frame(analyse_data)
     
 #change response to moral dilemma
 #def call the police = 1
 # def not call the police = 6
 for(i in 1:nrow(analyse_data)){
-  if(analyse_data[i,"moral dilemma"] == "Definitely call the police and report the robber"){
-  analyse_data[i,"moral dilemma"]<- 1
-  } else if (analyse_data[i,"moral dilemma"] == "Very likely call the police and report the robber"){
-  analyse_data[i,"moral dilemma"]<- 2
-  } else if (analyse_data[i,"moral dilemma"] == "Probably call the police and report the robber"){
-  analyse_data[i,"moral dilemma"]<- 3
-  } else if (analyse_data[i,"moral dilemma"] == "Probably do nothing and the leave the robber alone"){
-    analyse_data[i,"moral dilemma"]<- 4
-  } else if (analyse_data[i,"moral dilemma"] == "Very likely do nothing and the leave the robber alone"){
-    analyse_data[i,"moral dilemma"]<- 5
-  } else if (analyse_data[i,"moral dilemma"] == "Definitely do nothing and leave the robber alone"){
-    analyse_data[i,"moral dilemma"]<- 6
-  }
+  if(analyse_data[i,"moral_dilemma"] == "Definitely call the police and report the robber"){
+  analyse_data[i,"moral_dilemma"]= 1
+  } else if (analyse_data[i,"moral_dilemma"] == "Very likely call the police and report the robber"){
+  analyse_data[i,"moral_dilemma"]= 2
+  } else if (analyse_data[i,"moral_dilemma"] == "Probably call the police and report the robber"){
+  analyse_data[i,"moral_dilemma"]= 3
+  } else if (analyse_data[i,"moral_dilemma"] == "Probably do nothing and the leave the robber alone"){
+    analyse_data[i,"moral_dilemma"]= 4
+  } else if (analyse_data[i,"moral_dilemma"] == "Very likely do nothing and the leave the robber alone"){
+    analyse_data[i,"moral_dilemma"]= 5
+  } else if (analyse_data[i,"moral_dilemma"] == "Definitely do nothing and leave the robber alone"){
+    analyse_data[i,"moral_dilemma"]= 6}
 
 }
 # code ingroup pro and outgroup anti to 0 and 1
@@ -120,6 +125,30 @@ for(i in 1:nrow(analyse_data)){
   }
 
 }
+# safe data in this format for later
+cleaned_data <- analyse_data
+for(i in 1:nrow(cleaned_data)){
+  if(cleaned_data[i,"issue"] == "Gun control"){
+  cleaned_data[i,"issue"]= 0
+  } else if (cleaned_data[i,"issue"] == "Feminism"){
+  cleaned_data[i,"issue"]= 1
+  } else if (cleaned_data[i,"issue"] == "Joe Biden"){
+  cleaned_data[i,"issue"]= 2
+  } else if (cleaned_data[i,"issue"] == "Immigration and Dreamers"){
+    cleaned_data[i,"issue"]= 3
+  } else if (cleaned_data[i,"issue"] == "Transgender rights"){
+    cleaned_data[i,"issue"]= 4
+  } else if (cleaned_data[i,"issue"] == "Drug legalization"){
+    cleaned_data[i,"issue"]= 5
+  } else if (cleaned_data[i,"issue"] == "Colin Kaepernick kneeling during the national anthem"){
+    cleaned_data[i,"issue"]= 6
+  } else if (cleaned_data[i,"issue"] == "Buying and wearing fur"){
+    cleaned_data[i,"issue"]= 7
+  } else if (cleaned_data[i,"issue"] == "Taxing religious organizations"){
+    cleaned_data[i,"issue"]= 8
+  }  }
+
+
 
 
 
@@ -131,20 +160,75 @@ for(i in 1:nrow(analyse_data)){
 # length(analyse_data$ingroup_norm_new)
 # length(analyse_data$both_norms_shown)
 # 
-# ordinal_1 <- clm(as.factor(analyse_data$`moral dilemma`)~ingroup_norm_new*both_norms_shown, data=analyse_data)
+#make all value numeric
+analyse_data <- mutate_all(analyse_data, function(x) as.numeric(as.character(x)))
+ordinal_1 <- clm(as.factor(moral_dilemma)~ ingroup_norm_new*both_norms_shown, data=analyse_data)
 # 
-# source("functions/produce_mean_and_count_bar_plot.R")
-# plot_1 <- produce_mean_and_count_bar_plot(analyse_data, bar_width_means=0.5, bar_width_response=0.3)
-# ggsave(file="plot_1.png", plot=plot_1, width=190, height = 110, units="mm")  
+source("functions/produce_mean_and_count_bar_plot.R")
+plot_1 <- produce_mean_and_count_bar_plot(analyse_data, bar_width_means=0.5, bar_width_response=0.3)
+ggsave(file="plot_1.png", plot=plot_1, width=190, height = 110, units="mm")  
 
 #Bayesian analysis------------
 #Prepare data for stan.
 analyse_data <- analyse_data %>%
-  select(analyse_data$`moral dilemma`, ingroup_norm_new, both_norms_shown, identification_pro, identification_anti) %>% #select relevant columns
+  select(moral_dilemma, ingroup_norm_new, both_norms_shown, identification_pro, identification_anti) %>% #select relevant columns
   mutate(identification_pro = ifelse(is.na(identification_pro), 1, identification_pro), #For the experiment we assumed that participants identified with the ingroup and not with the outgroup.
          identification_anti = ifelse(is.na(identification_anti), 1, identification_anti)
          )
 stan_data_all <- as.list(c(analyse_data, N = dim(analyse_data)[1]))
-stan_data1 <- as.list(c(filter(analyse_data), N=sum(analyse_data)))
+#stan_data1 <- as.list(c(filter(analyse_data), N=sum(analyse_data)))
+
+#--Fit models
+fit_SCT_all <- rstan::stan(file = "stan_models/SCT.stan", data=stan_data_all, iter=10000, chains=4, seed = 123, control=list(adapt_delta = 0.99))
+fit_herding_all <- rstan::stan(file = "stan_models/herding.stan", data=stan_data_all, iter=10000, chains=4, control=list(adapt_delta = 0.99))
+
+#--Compare models using Bayes Factors
+marg_lik_SCT_all <- bridge_sampler(samples = fit_SCT_all)
+marg_lik_herding_all <- bridge_sampler(samples = fit_herding_all)
+bf(marg_lik_herding_all,marg_lik_SCT_all)
+
+
+#Create prior-posterior plots-------
+# source("functions/plot_priors_posteriors.R")
+# 
+# #Plot which issues people cared about and the extent to which they agreed with them-------
+# issue_plot_3 <- ggplot(cleaned_data, aes(x=factor(issue,labels = c(#"Gun control", 
+#                                                  "Feminism",
+#                                                  #"Joe Biden",
+#                                                  #"Immigration and Dreamers",
+#                                                  "Transgender rights",
+#                                                  #"Drug legalization",
+#                                                  "Colin Kaepernick kneeling during the national anthem",
+#                                                  "Buying and wearing fur"
+#                                                  #"Taxing religious organizations"
+#                                                  )
+#                                                 ),
+#                   y = "statement rating", 
+#                   colour = factor(issue),
+#                   fill = factor(issue))) + 
+#   geom_dotplot(binaxis = "y", stackdir = "center", binwidth = 0.15) +
+#   labs(x = "Issue", y="Agreement") + 
+#   guides(color=FALSE, fill=FALSE)+
+#   scale_y_continuous(breaks=c(0,5,10), labels = c("Strongly disagree", "Neutral", "Strongly agree"))
+# ggsave("issue_plot_3.png", issue_plot_3, width=34, height=13, units="cm")
+# 
+# issue_plot_4 <- ggplot(cleaned_data, aes(x=factor(issue#, #labels = c("Gun \n control", 
+# #                                                                 "Feminism", 
+# #                                                                 "Joe \n Biden", 
+# #                                                                 "Immigration",
+# #                                                                 "Transgender \n rights",
+# #                                                                 "Drug \n legalization",
+# #                                                                 "Colin \n Kaepernick",
+# #                                                                 "Fur is \n wrong",
+# #                                                                 "Taxing religious organizations")
+# ),
+#                                   y = issue, 
+#                                   colour = factor(issue),
+#                                   fill = factor(issue))) + 
+#   geom_dotplot(binaxis = "y", stackdir = "center", binwidth = 0.15) +
+#   labs(x = "Issue", y="Agreement") + 
+#   guides(color=FALSE, fill=FALSE)+
+#   scale_y_continuous(breaks=c(0,5,10), labels = c("Strongly disagree", "Neutral", "Strongly agree"))
+# ggsave("issue_plot_4.png", issue_plot_4, width=34, height=13, units="cm")
 ```
 
