--- a/analyses/analysis_1.Rmd
+++ b/analyses/analysis_1.Rmd
@@ -142,8 +142,13 @@ analyse_data %>% tbl_df %>% rmarkdown::paged_table()
 analyse_data <- analyse_data %>%
   filter(ingroup != "exclude")
   
-# TODO add columns "ingroup_agree" and "outgroup_agree" to include influence of identification in model
-
+# add columns to include influence of identification in model:
+# column "ingroup_agree" is 1 if participant identifies with ingroup and 0 if not
+# column "ingroup disagree" is 1 if participant does not identify with outgroup and 1 otherwise
+analyse_data <- analyse_data %>%
+  mutate(ingroup_agree = ifelse( ((analyse_data$ingroup == "pro" && analyse_data$identification_pro == 1) || (analyse_data$ingroup == "anti" && analyse_data$identification_anti == 1)), 1, 0)) %>%
+  mutate(outgroup_disagree = ifelse( ((analyse_data$outgroup == "pro" && analyse_data$identification_pro == 0) || (analyse_data$outgroup == "anti" && analyse_data$identification_anti == 0)), 1, 0))
+analyse_data %>% tbl_df %>% rmarkdown::paged_table()
 
 # code issues as numbers 0-8
 for(i in 1:nrow(cleaned_data)){
