--- a/analyses/analysis_1.Rmd
+++ b/analyses/analysis_1.Rmd
@@ -97,6 +97,7 @@ analyse_data <- analyse_data %>%
     moral_dilemma = "moral dilemma"
   )
 analyse_data <- as.data.frame(analyse_data)
+
     
 #change response to moral dilemma
 #def call the police = 1
@@ -133,6 +134,8 @@ for(i in 1:nrow(analyse_data)){
   }
 }
 
+n_participants_cleaned <- nrow(analyse_data)
+
 # add columns representing ingroup and outgroup of participant
 # if participant was neutral about statement, exclude their data
 analyse_data <- analyse_data %>%
@@ -141,9 +144,13 @@ analyse_data %>% tbl_df %>% rmarkdown::paged_table()
 
 analyse_data <- analyse_data %>%
   filter(ingroup != "exclude")
+
+# look how many were excluded bco neutral statement rating
+n_excluded_statement <- n_participants_cleaned- nrow(analyse_data) 
+n_excluded_statement
   
 # add columns to include influence of identification in model:
-# column "ingroup_agree" is 1 if participant identifies with ingroup and 0 if not
+# column "ingroup_agree" is 1 if participant identifies with ingroup and 0 if not -> TODO is irgendwie immer 1 aber sollte bei nr3 0 sein :(
 # column "ingroup disagree" is 1 if participant does not identify with outgroup and 1 otherwise
 analyse_data <- analyse_data %>%
   mutate(ingroup_agree = ifelse( ((analyse_data$ingroup == "pro" && analyse_data$identification_pro == 1) || (analyse_data$ingroup == "anti" && analyse_data$identification_anti == 1)), 1, 0)) %>%
