--- a/analyses/analysis_1.Rmd
+++ b/analyses/analysis_1.Rmd
@@ -139,7 +139,8 @@ n_participants_cleaned <- nrow(analyse_data)
 # add columns representing ingroup and outgroup of participant
 # if participant was neutral about statement, exclude their data
 analyse_data <- analyse_data %>%
-  mutate(ingroup = ifelse(analyse_data$`statement rating` >= 1,"pro", ifelse(analyse_data$`statement rating` < 0, "anti", "exclude")))
+  mutate(ingroup = ifelse(analyse_data$`statement rating` >= 1,"pro", ifelse(analyse_data$`statement rating` < 0, "anti", "exclude"))) %>%
+  mutate(outgroup = ifelse(analyse_data$`statement rating` >= 1,"anti", ifelse(analyse_data$`statement rating` < 0, "pro", "exclude")))
 analyse_data %>% tbl_df %>% rmarkdown::paged_table()
 
 analyse_data <- analyse_data %>%
@@ -150,11 +151,11 @@ n_excluded_statement <- n_participants_cleaned- nrow(analyse_data)
 n_excluded_statement
   
 # add columns to include influence of identification in model:
-# column "ingroup_agree" is 1 if participant identifies with ingroup and 0 if not -> TODO is irgendwie immer 1 aber sollte bei nr3 0 sein :(
+# column "ingroup_agree" is 1 if participant identifies with ingroup and 0 if not 
 # column "ingroup disagree" is 1 if participant does not identify with outgroup and 1 otherwise
 analyse_data <- analyse_data %>%
-  mutate(ingroup_agree = ifelse( ((analyse_data$ingroup == "pro" && analyse_data$identification_pro == 1) || (analyse_data$ingroup == "anti" && analyse_data$identification_anti == 1)), 1, 0)) %>%
-  mutate(outgroup_disagree = ifelse( ((analyse_data$outgroup == "pro" && analyse_data$identification_pro == 0) || (analyse_data$outgroup == "anti" && analyse_data$identification_anti == 0)), 1, 0))
+  mutate(ingroup_agree = ifelse( ((analyse_data$ingroup == "pro" & analyse_data$identification_pro == 1) | (analyse_data$ingroup == "anti" & analyse_data$identification_anti == 1)), 1, 0)) %>%
+  mutate(outgroup_disagree = ifelse( ((analyse_data$outgroup == "pro" & analyse_data$identification_pro == 0) | (analyse_data$outgroup == "anti" & analyse_data$identification_anti == 0)), 1, 0))
 analyse_data %>% tbl_df %>% rmarkdown::paged_table()
 
 # code issues as numbers 0-8
